# Inquiry_Business_Status

./: .gitignore.txt  Cloud_Vision.py  Inquiry_Business_Status.py  README.md  Util.py  cloud_vision.py  main.py  pyproject.toml
config/: __init__.py  bs_config.ini  config.ini  config.ini.template  requirements.txt
data/: __init__.py
logs/: __init__.py
utils/: utils_config.py  utils_img.py  utils_io.py  utils_logs.py
